cleaned code and added notes

--- a/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
+++ b/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "    dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n",
     "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
+    "    # each row represents one request for surveillance footage from the RTCC \n",
     "    dfb = pd.read_csv(\"../data/real_time_crime_center/rtcc.csv\")\n",
     "    dfb[\"rtcc_requested\"] = \"1\"\n",
     "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
@@ -34,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_12580\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_80512\\153542535.py:2: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
      ]
     }
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +73,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[~((df.charge_description.fillna(\"\") == \"\"))]\n",
+    "# drop rows missing charge descriptions/crimes\n",
+    "df = df[~((df.charge_description.fillna(\"\") == \"\"))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# impute race with the mode\n",
     "df.loc[:, \"offender_race\"] = df.offender_race.fillna(\"\").str.replace(r\"^$\", \"black\", regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filter for top 10 most common charge descriptions/crimes\n",
     "top_10_charge_descs_sr = (pd.Series(df.groupby(\"charge_description\")\n",
     "                                                .rtcc_requested.value_counts()\n",
     "                                                .sort_values(ascending=False).head(10))\n",
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,36 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['offender_race', 'AGG. BATTERY', 'AGG. CRIMINAL DAMAGE',\n",
-       "       'AGGRAVATED ASSAULT WITH A FIREARM', 'ARMED ROBBERY', 'SIMPLE BURGLARY',\n",
-       "       'SIMPLE CRIMINAL DAMAGE TO PROPERTY', 'SIMPLE ROBBERY', 'THEFT',\n",
-       "       'THEFT OF A MOTOR VEHICLE', 'USE OF FIREARM IN ROBBERY'],\n",
-       "      dtype='object', name='charge_description')"
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "counts = df.groupby(\"offender_race\").charge_description.value_counts()\n",
     "counts = pd.DataFrame(counts)\n",
     "counts = counts.reset_index()\n",
     "counts =  counts.pivot(index='offender_race', columns='charge_description', values='count')\n",
-    "counts = counts.reset_index()\n",
-    "counts.columns"
+    "counts = counts.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -180,8 +176,8 @@
       "Model Family:                 Poisson   Df Model:                            5\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1007.7\n",
-      "Date:                Mon, 10 Apr 2023   Deviance:                       1794.4\n",
-      "Time:                        21:39:49   Pearson chi2:                 1.67e+03\n",
+      "Date:                Tue, 11 Apr 2023   Deviance:                       1794.4\n",
+      "Time:                        18:08:16   Pearson chi2:                 1.67e+03\n",
       "No. Iterations:                     9   Pseudo R-squ. (CS):              1.000\n",
       "Covariance Type:            nonrobust                                         \n",
       "=============================================================================================\n",
@@ -198,13 +194,11 @@
     }
    ],
    "source": [
-    "counts_2 = df.groupby(\"offender_race\").charge_description.value_counts()\n",
-    "counts_2 = pd.DataFrame(counts_2)\n",
-    "counts_2 = counts_2.reset_index()\n",
-    "counts_2\n",
-    "model = sm.GLM.from_formula(\"count ~ offender_race\", family=sm.families.Poisson(), data=counts_2).fit()\n",
+    "counts_sm = df.groupby(\"offender_race\").charge_description.value_counts()\n",
+    "counts_sm = pd.DataFrame(counts_sm)\n",
+    "counts_sm = counts_sm.reset_index()\n",
+    "model = sm.GLM.from_formula(\"count ~ offender_race\", family=sm.families.Poisson(), data=counts_sm).fit()\n",
     "\n",
-    "# Print the model summary\n",
     "print(model.summary())"
    ]
   }
