added additional notes

--- a/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
+++ b/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
@@ -21,10 +21,12 @@
    "outputs": [],
    "source": [
     "def clean():\n",
+    "    # police report data\n",
     "    dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n",
     "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
-    "    # each row represents one request for surveillance footage from the RTCC \n",
+    "    # This table only contains an item number. When merged with the report table, a table is produced where\n",
+    "    # each row represents a police report where surveillance footage was requested  \n",
     "    dfb = pd.read_csv(\"../data/real_time_crime_center/rtcc.csv\")\n",
     "    dfb[\"rtcc_requested\"] = \"1\"\n",
     "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
