--- a/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
+++ b/notebooks_epr/rtcc_police_reports_regression_race_and_crime_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "    # police report data\n",
     "    dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n",
     "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
+    "    print(dfa.shape)\n",
     "\n",
     "    # This table only contains an item number. When merged with the report table, a table is produced where\n",
     "    # each row represents a police report where surveillance footage was requested  \n",
@@ -31,43 +32,57 @@
     "    dfb[\"rtcc_requested\"] = 1\n",
     "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
-    "    df = pd.merge(dfa, dfb, on=\"item_number\", how=\"outer\")\n",
+    "    df = pd.merge(dfa, dfb, on=\"item_number\")\n",
     "    df.loc[:, \"rtcc_requested\"] = df.rtcc_requested.fillna(0)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_10932\\2953715956.py:3: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ayyubi\\AppData\\Local\\Temp\\ipykernel_29524\\1403259277.py:3: DtypeWarning: Columns (13,23,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dfa = pd.read_csv(\"../data/police_reports/electronic_police_report_2018_2022.csv\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(536586, 25)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(558642, 27)"
+       "Index(['item_number', 'district', 'location', 'disposition', 'signal_type',\n",
+       "       'signal_description', 'occurred_date_time', 'charge_code',\n",
+       "       'charge_description', 'offender_race', 'offender_gender',\n",
+       "       'offender_age', 'offender_number', 'person_type', 'victim_race',\n",
+       "       'victim_gender', 'victim_age', 'victim_number', 'victim_fatal_status',\n",
+       "       'hate_crime', 'report_type', 'year', 'offenderid', 'offenderstatus',\n",
+       "       'persontype', 'Signal Code', 'rtcc_requested'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = clean()\n",
-    "df.shape"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(558642, 27)"
+       "(26738, 27)"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(513811, 27)"
+       "(16803, 27)"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,23 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unknown                                      0.605666\n",
-       "Black                                        0.335923\n",
-       "White                                        0.052017\n",
-       "Hispanic                                     0.005008\n",
-       "Asian                                        0.001156\n",
-       "Amer. Ind.                                   0.000181\n",
-       "Native Hawaiian Or Other Pacific Islander    0.000049\n",
+       "Black                                        0.570553\n",
+       "Unknown                                      0.372731\n",
+       "White                                        0.050051\n",
+       "Hispanic                                     0.005297\n",
+       "Asian                                        0.000893\n",
+       "Amer. Ind.                                   0.000357\n",
+       "Native Hawaiian Or Other Pacific Islander    0.000119\n",
        "Name: offender_race, dtype: float64"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +213,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[373], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m black_counts \u001b[39m=\u001b[39m counts\u001b[39m.\u001b[39;49mloc[counts[\u001b[39m'\u001b[39;49m\u001b[39moffender_race\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mblack\u001b[39;49m\u001b[39m'\u001b[39;49m, [\u001b[39m'\u001b[39;49m\u001b[39mTHEFT OF A MOTOR VEHICLE\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mTHEFT\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mARMED ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      2\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mUSE OF FIREARM IN ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGG. BATTERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE BURGLARY\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      3\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGGRAVATED ASSAULT WITH A FIREARM\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE CRIMINAL DAMAGE TO PROPERTY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGG. CRIMINAL DAMAGE\u001b[39;49m\u001b[39m'\u001b[39;49m]]\u001b[39m.\u001b[39mvalues\n\u001b[0;32m      6\u001b[0m white_counts \u001b[39m=\u001b[39m counts\u001b[39m.\u001b[39mloc[counts[\u001b[39m'\u001b[39m\u001b[39moffender_race\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mwhite\u001b[39m\u001b[39m'\u001b[39m, [\u001b[39m'\u001b[39m\u001b[39mTHEFT OF A MOTOR VEHICLE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTHEFT\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mARMED ROBBERY\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mUSE OF FIREARM IN ROBBERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGG. BATTERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIMPLE BURGLARY\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mSIMPLE ROBBERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGGRAVATED ASSAULT WITH A FIREARM\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mSIMPLE CRIMINAL DAMAGE TO PROPERTY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGG. CRIMINAL DAMAGE\u001b[39m\u001b[39m'\u001b[39m]]\u001b[39m.\u001b[39mvalues\n\u001b[0;32m     11\u001b[0m chi2, pval, dof, expected \u001b[39m=\u001b[39m chi2_contingency([black_counts, white_counts])\n",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m black_counts \u001b[39m=\u001b[39m counts\u001b[39m.\u001b[39;49mloc[counts[\u001b[39m'\u001b[39;49m\u001b[39moffender_race\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mblack\u001b[39;49m\u001b[39m'\u001b[39;49m, [\u001b[39m'\u001b[39;49m\u001b[39mTHEFT OF A MOTOR VEHICLE\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mTHEFT\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mARMED ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      2\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mUSE OF FIREARM IN ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGG. BATTERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE BURGLARY\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      3\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE ROBBERY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGGRAVATED ASSAULT WITH A FIREARM\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m                                                        \u001b[39m'\u001b[39;49m\u001b[39mSIMPLE CRIMINAL DAMAGE TO PROPERTY\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAGG. CRIMINAL DAMAGE\u001b[39;49m\u001b[39m'\u001b[39;49m]]\u001b[39m.\u001b[39mvalues\n\u001b[0;32m      6\u001b[0m white_counts \u001b[39m=\u001b[39m counts\u001b[39m.\u001b[39mloc[counts[\u001b[39m'\u001b[39m\u001b[39moffender_race\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mwhite\u001b[39m\u001b[39m'\u001b[39m, [\u001b[39m'\u001b[39m\u001b[39mTHEFT OF A MOTOR VEHICLE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTHEFT\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mARMED ROBBERY\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mUSE OF FIREARM IN ROBBERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGG. BATTERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIMPLE BURGLARY\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mSIMPLE ROBBERY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGGRAVATED ASSAULT WITH A FIREARM\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m                                                        \u001b[39m'\u001b[39m\u001b[39mSIMPLE CRIMINAL DAMAGE TO PROPERTY\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAGG. CRIMINAL DAMAGE\u001b[39m\u001b[39m'\u001b[39m]]\u001b[39m.\u001b[39mvalues\n\u001b[0;32m     11\u001b[0m chi2, pval, dof, expected \u001b[39m=\u001b[39m chi2_contingency([black_counts, white_counts])\n",
       "File \u001b[1;32mc:\\Users\\ayyubi\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:1067\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1065\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_scalar_access(key):\n\u001b[0;32m   1066\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_value(\u001b[39m*\u001b[39mkey, takeable\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_takeable)\n\u001b[1;32m-> 1067\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_tuple(key)\n\u001b[0;32m   1068\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1069\u001b[0m     \u001b[39m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[0;32m   1070\u001b[0m     axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n",
       "File \u001b[1;32mc:\\Users\\ayyubi\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:1256\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_tuple\u001b[1;34m(self, tup)\u001b[0m\n\u001b[0;32m   1253\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multi_take_opportunity(tup):\n\u001b[0;32m   1254\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multi_take(tup)\n\u001b[1;32m-> 1256\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_tuple_same_dim(tup)\n",
       "File \u001b[1;32mc:\\Users\\ayyubi\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexing.py:924\u001b[0m, in \u001b[0;36m_LocationIndexer._getitem_tuple_same_dim\u001b[1;34m(self, tup)\u001b[0m\n\u001b[0;32m    921\u001b[0m \u001b[39mif\u001b[39;00m com\u001b[39m.\u001b[39mis_null_slice(key):\n\u001b[0;32m    922\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m--> 924\u001b[0m retval \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39;49m(retval, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\u001b[39m.\u001b[39;49m_getitem_axis(key, axis\u001b[39m=\u001b[39;49mi)\n\u001b[0;32m    925\u001b[0m \u001b[39m# We should never have retval.ndim < self.ndim, as that should\u001b[39;00m\n\u001b[0;32m    926\u001b[0m \u001b[39m#  be handled by the _getitem_lowerdim call above.\u001b[39;00m\n\u001b[0;32m    927\u001b[0m \u001b[39massert\u001b[39;00m retval\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mndim\n",
